--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "backpack/revise-operation": "^1.0",
         "backpack/filemanager": "^1.0",
         "consoletvs/charts": "6.*",
-        "laravel/legacy-factories": "^1.0"
+        "laravel/legacy-factories": "^1.0",
+        "pestopancake/laravel-backpack-database-notifications": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "~1.4",
